         this functionality).

         String x("hello");
         std::string y = x->c_str();   // properly copies the char*-based string

      4) Now that the dafif library has been reworked, and the abstract Record
         is no longer a subclass to String, this String class is now marked 'final'
         to prevent subclassing of this type.

   Table class
      1) Slot parameter 'extrapolate' now accepts a Boolean

   Timer class
      1) Slot parameter 'active' now accepts a Boolean

--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
dafif library (mixr_dafif)

- This library has been revised and updated in a few ways.
  1) All database loader classes are now grouped within a 'loaders' directory.
  2) All record oriented classes are now grouped within a 'records' directory.
  3) All of the code has been revised to use std::string to represent strings
     throughout.
  4) The testDafif example program has also been revised to use and pass only
     std::string's to/from this library.

--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
recorder library (mixr_recorder)

   DataRecorder class
      1) Slot parameters 'eventName' and 'application' now accept an Identifier

   PrintSelected class
      1) Slot parameter 'timeOnly' now accepts a Boolean

   NetInput class
      1) Slot parameter 'noWait' now accepts a Boolean

   NetOutput class
      1) Slot parameter 'noWait' now accepts a Boolean

   TabPrinter class
      1) Slot parameter 'msgHdrOptn' now accepts an Identifier

--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
terrain library (mixr_terrain)

   DtedFile class