@@ -19,11 +19,10 @@ Pair::Pair(const std::string& slot, Object* object)
 {
     STANDARD_CONSTRUCTOR()
 
-    // Set the slot name (already ref() in 'new' constructor)
-    //slotname = new Identifier(slot);
+    // set the slot name (already ref() in 'new' constructor)
     slotname = slot;
 
-    // Set the object & ref()
+    // set the object & ref()
     if (object != nullptr) {
         obj = object;
         obj->ref();
@@ -34,23 +33,9 @@ void Pair::copyData(const Pair& pair1, const bool)
 {
     BaseClass::copyData(pair1);
 
-    // unref() any old data
-//    if (slotname != nullptr) {
-//       slotname->unref();
-//    }
-
     if (obj != nullptr) {
        obj->unref();
     }
-
-    // Copy slotname (already ref() by constructor in clone())
-/*
-    if (pair1.slotname != nullptr) {
-       slotname = static_cast<Identifier*>(pair1.slotname->clone());
-    } else {
-       slotname = nullptr;
-    }
-*/
 
     slotname = pair1.slotname;
 
@@ -64,9 +49,6 @@ void Pair::copyData(const Pair& pair1, const bool)
 
 void Pair::deleteData()
 {
-//    if (slotname != nullptr) slotname->unref();
-//    slotname = nullptr;
-
     if (obj != nullptr) obj->unref();
     obj = nullptr;
 }
